[package]
name = "backend"
version = "0.1.0"
authors = ["name"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
tokio = "0.1"
env_logger = "0.6"
serde = "1.0.98"
serde_json = "1.0"
serde_derive = "1.0"
juniper = "0.13.1"
futures = "0.1"